# Nibbl

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  config.example.toml  pyproject.toml
scripts/: install_launchd.sh  uninstall_launchd.sh
src/: config.py  database.py  exporter.py  main.py  models.py  orchestrator.py  scheduler.py  utils.py
src/conversation/: manager.py  prompts.py
src/imessage/: handler.py  reader.py  sender.py
src/picnic/: cart_filler.py  client.py
src/planner/: formatter.py  meal_planner.py  pantry_matcher.py  preference_engine.py
tests/: test_cart_filler.py  test_conversation.py  test_exporter.py  test_formatter.py  test_meal_planner.py  test_models.py  test_preference_engine.py  test_utils.py
