[project]
name = "nibbl"
version = "0.1.0"
description = "AI-powered family dinner planning agent with iMessage and Picnic integration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-picnic-api2>=1.3.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
nibbl = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
